packages/python-alpm/python_alpm-0.4.0.tar.gz/python_alpm-0.4.0/alpm-srcinfo/tests/correct/package_with_any_arch.srcinfo
pkgbase = any-arch
	pkgver = 0.1.0
	pkgrel = 1
	arch = x86_64

pkgname = any-arch
	arch = any
